[package]
name = "fmtsize"
version = "0.1.2"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = """
Human-readable formatting for memory sizes, etc.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
debug = 0

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
